feat: i18n and add language + dark light toggle + swagger doc
